--- a/styles/gallery-section.css
+++ b/styles/gallery-section.css
@@ -63,6 +63,7 @@
 
 .gallery-lowres-img {
   cursor: pointer;
+  height: 180px;
   border-radius: 1.2rem;
 }
 
@@ -77,7 +78,7 @@
   }
 
   .left-side-section {
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .about-section {
