Login form with backend support. Unfinished yet.

--- a/styles/gallery-section.css
+++ b/styles/gallery-section.css
@@ -16,12 +16,7 @@
 }
 
 .about-section {
-  padding: 1.5rem 1.5rem;
-  height: fit-content;
-
-  background: var(--gray-900);
-  border: 1px solid var(--gray-800);
-  border-radius: 1.2rem;
+  flex-direction: column;
 
   transform: translate(70px, -30px);
   box-shadow: 20px 20px 30px var(--black-transparent);
@@ -38,16 +33,7 @@
 }
 
 .refresh-section {
-  display: flex;
-  gap: 1.25rem;
-  align-items: center;
-
-  padding: 1.5rem 1.5rem;
-  height: fit-content;
-
-  background: var(--gray-900);
-  border: 1px solid var(--gray-800);
-  border-radius: 1.2rem;
+  flex-direction: row;
 }
 
 .refresh-button {
@@ -67,6 +53,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  margin-bottom: 2rem;
 }
 
 .gallery-lowres-img {
