--- a/styles/search-results.css
+++ b/styles/search-results.css
@@ -20,7 +20,7 @@
 
 .result-box-shown {
   transition: all cubic-bezier(0.16, 1, 0.5, 1) 0.3s;
-  width: 130%;
+  width: 170%;
   opacity: 1;
 }
 
@@ -38,19 +38,19 @@
   cursor: pointer;
 
   transition: all cubic-bezier(0.16, 1, 0.5, 1) 0.3s;
-  mask: linear-gradient(to right, var(--white-muted) 80%, transparent 100%);
+  /* mask: linear-gradient(to right, var(--white-muted) 80%, transparent 100%); */
 }
 
 .search-result-content:hover {
   background: var(--gray-700);
   transition: all cubic-bezier(0.16, 1, 0.5, 1) 0.3s;
-  border-top-left-radius: 1.2rem;
-  border-bottom-left-radius: 1.2rem;
+  border-radius: 1.2rem;
 }
 
 .search-result-p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
-  text-wrap: nowrap;
 }
 
 .search-result-img {
